Fixed bug causing tiles to move out of place when selected - Fixed bug preventing new tiles from spawning in columns with only one tile

--- a/thesarush/src/components/Column/styles.css
+++ b/thesarush/src/components/Column/styles.css
@@ -8,10 +8,10 @@
 
     max-height: 100vh;
 
-    top: -925px;
+    top: -465px;
     animation: drop 0.6s forwards;
 }
 
 @keyframes drop {
-    100%{transform: translateY(600px)}
+    100%{transform: translateY(400px)}
 }
