--- a/thesarush/src/components/Letter/styles.css
+++ b/thesarush/src/components/Letter/styles.css
@@ -8,7 +8,7 @@
 
     text-align: center;
 
-    border: 2px solid rgb(255, 255, 60);
+    border: 2px solid rgb(255, 255, 0);
     border-radius: 30px;
     min-width: 55px;
     max-width: 55px;
@@ -27,6 +27,8 @@
 
 .selected {
     background-color: rgb(30, 30, 30);
+    position: relative;
+    bottom: 60px;
 }
 
 .hidden {
@@ -36,12 +38,12 @@
 .new-letter {
     animation: drop 0.4s forwards;
     position: relative;
-    bottom: 400px;
+    bottom: 460px;
     z-index: 300;
 }
 
 @keyframes drop {
-    100%{transform: translateY()}
+    100%{transform: translateY(10px)}
 }
 
 /* create key-frames drop to translate y number of pixels related to length of array - shorter array will translate less */
